plugins {
    id 'java'
    id 'checkstyle'
    id "org.sonarqube" version "2.8"
    id "org.owasp.dependencycheck" version "6.0.2"
    id 'maven-publish'
}

group 'com.docutools'
version '1.0.14'

sourceCompatibility = 15
targetCompatibility = 15

repositories {
    mavenCentral()
    maven {
        url("https://maven.pkg.github.com/DDS-GmbH/jlibvips")
        credentials {
            username = "github-actions"
            password = project.findProperty("GITHUB_TOKEN") ?: System.getenv("GITHUB_TOKEN")
        }
    }
}

dependencies {
    implementation('commons-beanutils:commons-beanutils:1.9.4')

    implementation("org.apache.poi:poi:4.1.2")
    implementation("org.apache.poi:poi-ooxml:4.1.2")
    implementation("org.apache.poi:poi-ooxml-schemas:4.1.2")

    implementation("com.google.code.gson:gson:2.8.6")
    implementation("org.apache.tika:tika-core:1.24.1")

    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.3'
    runtimeOnly group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'

    implementation 'com.codepoetics:protonpack:1.16'
    implementation("com.google.guava:guava:29.0-jre")

    implementation("io.github.codecitizen:jlibvips:1.3.2.RELEASE")

    testImplementation('org.junit.jupiter:junit-jupiter:5.6.0')
    testImplementation("org.hamcrest:hamcrest:2.2")

    checkstyle 'com.puppycrawl.tools:checkstyle:8.36.2'
}

tasks.withType(Checkstyle) {
    ignoreFailures = false
    maxWarnings = 0 // Maximum number of warnings allowed
    reports {
        html.destination rootProject.file("build/reports/checkstyle.html")
    }
}

dependencyCheck {
    format = 'ALL'
    junitFailOnCVSS = 7.0
    failBuildOnCVSS = 9.0
    suppressionFile = 'config/dependency-check/suppression.xml'
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

java {
    withSourcesJar()
}

test {
    jvmArgs '--enable-preview'
    useJUnitPlatform()
}

task automatedTests(type: Test) {
    jvmArgs '--enable-preview'
    useJUnitPlatform()
    include '**/*Test.class'
}

publishing {
    repositories {
        maven {
            name = "GitHubPackages"
            url = uri("https://maven.pkg.github.com/DDS-GmbH/jocument")
            credentials {
                username = "codecitizen"
                password = project.findProperty("GITHUB_TOKEN") ?: System.getenv("GITHUB_TOKEN")
            }
        }
    }
    publications {
        gpr(MavenPublication) {
            from(components.java)
        }
    }
}